fixed background container. Need to align nav bar and form to fit

--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,23 @@
 body {
-  background-image: url("./images/cat\ background.jpg");
+ 
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ 
+}
+
+.iphoneBackground {
+  background-image: url("https://images.unsplash.com/photo-1585060544812-6b45742d762f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1181&q=80");
+  background-size: 125%;
+  background-position: center; 
+  height: 1000px;
+  width: 100%;
+  border: 5px solid blue;
+  z-index: -1;
 }
 
 .navbar{
   display: flex;
   justify-content: center;
-  height: 100px;
   background: skyblue;
-  margin-bottom: 5%;
 }
 .navContainer{
   display: flex;
